--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -17,7 +17,7 @@
 <ul>
     <li>
         <strong>Current weather in a city</strong><br>
-        <a href="/api/weather" target="_blank"><strong>GET
+        <a href="/api/weather/portland?state=OR&country=US&units=imperial" target="_blank"><strong>GET
                 /api/weather/{city}?country={country}&state={state}</strong></a><br>
         <br>
         <div style="font-size: 12px;">
@@ -37,7 +37,8 @@
 
             <strong>Response JSON</strong>
             <ul>
-                <li>Click <a href="/api/weather" target="_blank">the link above</a> to see example output.
+                <li>Click <a href="/api/weather/portland?state=OR&country=US&units=imperial" target="_blank">the link
+                        above</a> to see example output.
                 </li>
             </ul>
         </div>
